--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.3",
     "firebase": "^11.10.0",
     "next": "15.4.1",
     "next-auth": "^4.24.7",
@@ -20,11 +22,13 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
